--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-# Streamlit para la app web
-streamlit==1.26.0
+# Dependencias principales
+Flask==2.3.6
+dash==2.18.1
+plotly==5.20.0
+pandas==2.1.1
+numpy==1.25.2
 
-# Manipulación de datos
-pandas==2.1.1   
-numpy==1.26.0
+# Conexión a SQL Server
+pyodbc==4.0.42
 
-# Gráficos
-matplotlib==3.8.1
+# Para manejar variables de entorno
+python-dotenv==1.0.0
 
-# Lectura de Excel
-openpyxl==3.1.3
-
-# Opcional: si quieres guardar gráficos o reportes
-xlsxwriter==3.1.1
+# Build tools (opcional, para asegurar compatibilidad)
+setuptools>=67.8.0
+wheel>=0.41.2
