--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,5 @@
-# Dependencias principales
-Flask==2.3.3
-dash==2.18.1
-plotly==5.20.0
-pandas==2.1.1
-numpy==1.25.2
-
-# Conexión a SQL Server
-pyodbc==4.0.42
-
-# Para manejar variables de entorno
-python-dotenv==1.0.0
-
-# Build tools (opcional, para asegurar compatibilidad)
-setuptools>=67.8.0
-wheel>=0.41.2
+streamlit==1.32.0
+pandas==2.1.3
+numpy==1.24.3
+matplotlib==3.7.5
+openpyxl==3.1.2
